Update CSS styles and fix layout issues

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 /*
-! tailwindcss v3.3.3 | MIT License | https://tailwindcss.com
+! tailwindcss v3.3.5 | MIT License | https://tailwindcss.com
 */
 
 /*
@@ -653,6 +653,10 @@ video {
   left: 118px;
 }
 
+.left-\[12px\] {
+  left: 12px;
+}
+
 .left-\[14\.08px\] {
   left: 14.08px;
 }
@@ -733,6 +737,10 @@ video {
   top: 10px;
 }
 
+.top-\[111px\] {
+  top: 111px;
+}
+
 .top-\[13px\] {
   top: 13px;
 }
@@ -791,14 +799,6 @@ video {
 
 .top-\[76px\] {
   top: 76px;
-}
-
-.left-\[193\.16px\] {
-  left: 193.16px;
-}
-
-.top-\[3px\] {
-  top: 3px;
 }
 
 .m-auto {
@@ -933,6 +933,13 @@ video {
   margin-top: 2.25rem;
 }
 
+.line-clamp-4 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 4;
+}
+
 .block {
   display: block;
 }
@@ -1001,6 +1008,14 @@ video {
   height: 100px;
 }
 
+.h-\[107px\] {
+  height: 107px;
+}
+
+.h-\[111px\] {
+  height: 111px;
+}
+
 .h-\[116\.21px\] {
   height: 116.21px;
 }
@@ -1011,6 +1026,10 @@ video {
 
 .h-\[142px\] {
   height: 142px;
+}
+
+.h-\[152px\] {
+  height: 152px;
 }
 
 .h-\[15px\] {
@@ -1101,12 +1120,8 @@ video {
   height: 100vh;
 }
 
-.h-\[136px\] {
-  height: 136px;
-}
-
-.h-\[107px\] {
-  height: 107px;
+.min-h-full {
+  min-height: 100%;
 }
 
 .min-h-screen {
@@ -1181,8 +1196,16 @@ video {
   width: 114px;
 }
 
+.w-\[121\.32px\] {
+  width: 121.32px;
+}
+
 .w-\[122px\] {
   width: 122px;
+}
+
+.w-\[132px\] {
+  width: 132px;
 }
 
 .w-\[133px\] {
@@ -1215,6 +1238,10 @@ video {
 
 .w-\[155px\] {
   width: 155px;
+}
+
+.w-\[156px\] {
+  width: 156px;
 }
 
 .w-\[157px\] {
@@ -1335,18 +1362,6 @@ video {
 
 .w-screen {
   width: 100vw;
-}
-
-.w-\[136\.82px\] {
-  width: 136.82px;
-}
-
-.w-\[\] {
-  width: ;
-}
-
-.w-\[121\.32px\] {
-  width: 121.32px;
 }
 
 .flex-1 {
@@ -1630,6 +1645,11 @@ video {
   padding-right: 0.5rem;
 }
 
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
 .px-5 {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
@@ -1755,6 +1775,10 @@ video {
 
 .tracking-wide {
   letter-spacing: 0.025em;
+}
+
+.tracking-wider {
+  letter-spacing: 0.05em;
 }
 
 .tracking-widest {
